--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Builder</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Site Creator</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="YXoQEi73Cg65Og6NlfDxXe+ovX5PqNLJtqCvv2bVQ1d09+6lcDclwfrVzpA+g6+9w/W8Al7GEHmzc4dXjCI9lbzQ4QqA8+OEqkODAfVL2T2dHc2nAWzmNQLXRKNccz4v" data-form-email="true">
+                    <input type="hidden" value="AR0wMVGnmlJUcFhF4OLaIgQKdl+uNJSWjDdzoM+coCt3C3v4lCxft2Z0y0e64Mpl7N9NZAFsG160gw2q01/Lh3nzNG+aLZZcitbwfwz6/Qef0Ys0BVFw3xTv/qMRB5U9" data-form-email="true">
 
                     
 
