--- a/LightRoom.html
+++ b/LightRoom.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Maker</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Generator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -256,7 +256,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="3LnJgLZidKhP8FgBZ0dwLdfZmT63SWvSYvz40eRkQ7dUjrM0Bro6HQRLK9zCdCNRWrqTF+UmaAP/jg5THaqz8s6efj+AFvaNmVwkaRZGC6XP+fGt3820Px99kTHXWltN" data-form-email="true">
+                    <input type="hidden" value="m1+uU2P8rxOwitBLHPpUtJWOxjmJPC8LAz1zma7X0jEYA19vgDzeFdjUoCJVlzeg+6e43JRJBWbI9DtveL4dfPbObpFjeE77vztU3/vO07uki9M0D3kxx4QZ+O0yqL3a" data-form-email="true">
 
                     
 
