--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/mbr-3-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/mbr-3-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(0, 0, 0);"></div>
 
@@ -246,7 +246,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="I+lT16LmDPH/q8f2TSRAGtyS4F1kPHt078KPIl3Df/2oQmLebZMcpMeWf+ps6/T1LPCYRd7znFEF1CXk0KVO1QSPHHq5hmWKWPx2bajEvdgNVO/LNrZzV79O1IyBsBd9" data-form-email="true">
+                    <input type="hidden" value="reyjXsw5TjhRY5g6AW8/aUJ+Ph558aGWxSLbBe1yH9yg1tt/q8oKmSuSLdp58zV1SMhoqW2Z7jj6UAlOt+V+AR6KxdPOl0eC6ycXAV0dpQRFMJxOF0uAVGkxXe/eWXa1" data-form-email="true">
 
                     
 
