--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best offline site builder software download</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple offline site builder software</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="6NwE5n+/qq0zoi5961TO115sVonnifY4SF+fddjt+LhluBitgOIAx1h50bho1svc3m06fw1tcXLdfCXxJQ3ArYeuLOXUw6inP7MRkLsZoYZqjzX9+k/3AEfJf5XfnewQ" data-form-email="true">
+                    <input type="hidden" value="Da6VHuFKUEUlmYgji7y3xDhJvxB1Y/QDpLvxxYuhNCl+i0lFasWF3DG1ZLPn8GhgchvKze16/eX947W08Nuugijf3xSrd8dsN4fKE225F4U5wuV6+1qkx4c4pA/61xlZ" data-form-email="true">
 
                     
 
