--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top html website design software</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple offline website generator</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="TObDnvJva4m0B4yj+WTbQ4bkrlg+H3ZQzqNuKwXBgtHlMxkDrxI1wrjdqPHQjoKsR0TB9t+gSw3eq1hed/bjCdMYzjocfCLYjvHKsK8g0EUvcUhejpouXT3at+560vdY" data-form-email="true">
+                    <input type="hidden" value="iJYy5JyMAldwaTwuaPI0hwnE/jW690XwRhfSCuTsOJ8QM88Roc7+LpVVPyoA09v1ER8h8l8b3D4F/L5uxRNeM86+gFkVdOWgOcIZs2qjbTXDwdrcC2h6e9gvgf62xuhJ" data-form-email="true">
 
                     
 
