--- a/Photoshop.html
+++ b/Photoshop.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple mobile site generator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4m" style="background-color: rgb(239, 239, 239); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">best offline web site creator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4m" style="background-color: rgb(239, 239, 239); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -277,7 +277,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="2u24npBC2GKhuZC63AFXW/0r2SrM8k2dN7F/AMi3S7cJYVhOtYia8xhkfhUi+gr+YzPBjBx/TxKBOoVgjjoJAWN9GWpPLw+3d/53tl0T0b2JCeNv8tIvxbmH926NVouS" data-form-email="true">
+                    <input type="hidden" value="6Yb3Vf6gVghfk7siLbdvWzVaap8cWDzal1rbcIYOX5sF5vgRdJHszMYq9AMHkh1OEHHDQTr7qkKTirQ7UKyo8DXs7aCFBAVcE7x5oIHaIvgo6mChaqLmxhE5sa4Kcdfu" data-form-email="true">
 
                     
 
