--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best drag and drop web site creator software</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">best html site building software download</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="CDKvWa895hgcF1AjpWBxefOtxHC41Wrsesvk+NY+a05rM+K/nl29uOyHcITSgstAM7dEx/DZzQcZBUGTZ0ySuwwOamqKy9y8ZRqqdRoC2fc6qM6zW1jGl5etKKJvvodT" data-form-email="true">
+                    <input type="hidden" value="bVjvX2zV8ry7sKKxCT+ZtQabtE7Hj5Cetc0/6XzRGhUcMKhVlC1swvA7Ps6aImUkQE6qfvqkGWJiARPMeBMKFlG5wf93pCth3II9M/wXrOmnsgE5/JIuoeqm/JclxbEx" data-form-email="true">
 
                     
 
