--- a/LightRoom.html
+++ b/LightRoom.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best site builder software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy responsive website development</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -256,7 +256,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="yQMlFBrul5a07MkJ79+0bPQsDEb2WU/f8gBMiahg0zp63AIRqDwhEzsJYThMOue6tlPaiIzRLTmSNsebugmkAxR0fm/wh0o0gBYpmzZidhtC7gu1kqUvC7ogx/TjMEyi" data-form-email="true">
+                    <input type="hidden" value="on/osyXJuJwXE2KOB6b8YKy3Rm/wOYTCm8Z7f67enYzt47VHKMKk+j6SbdFxF00mCBozY4+VGArQLAOsEq9FgJXMfpu61IhBfG3uGz9mwJjmDur8DolnP2awaVz0TOur" data-form-email="true">
 
                     
 
