--- a/Photoshop.html
+++ b/Photoshop.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy offline web page building software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4m" style="background-color: rgb(239, 239, 239); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">offline web building software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4m" style="background-color: rgb(239, 239, 239); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -277,7 +277,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="g5djecVKDOoiRKfRRg4gFDU7qGe9joCKnkhsAQhkP069u982zv/Xly/uy6KBGEQJSufoeA6uGkHTfpq2DRYXu6lYn1cAvs79ueLSiT5F4kiIBJwIhG96ZbEN6VTNGRnf" data-form-email="true">
+                    <input type="hidden" value="WLFkGNHCp+Yo+D0JR9kdEgO+3ckLARVqVrZtQyYRBA9RGstnX8vu59IUuRRiS0fqQH+/UCl+5J+YEF9mApud2Zur7pq9ykZ4SomkmGGcsE9pPDp3INXHD6Gy0LNLGMd0" data-form-email="true">
 
                     
 
