--- a/Introduction.html
+++ b/Introduction.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy drag and drop web page builder software</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box6-46" style="background-image: url(assets/images/mbr-1-2000x1333.jpg); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple wysiwyg web generator software</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box6-46" style="background-image: url(assets/images/mbr-1-2000x1333.jpg); padding-top: 120px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(0, 0, 0);">
     </div>
@@ -256,7 +256,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="Wg8xjLqiqh1nK1k6rlsIOqKA4Mn6mQ55TOj6KaSIOFC+ncCP2KdlNVWxvJXWeJUBfDf9omZsfCxkI32SyylO7LxVF4DbxuegWsNqOs3ZWDAIaNMY3daU+vOUa8tdLtxO" data-form-email="true">
+                    <input type="hidden" value="tf5kfE19CDbwA8t3F7kXL40DXrxE3LvPIZeQmephTJLKMIEgPm9Cr118JNxeZ2Di+adafifnMzbyeplWGmRdgVgzVgecFgJc9v7u1vC+evhOhjamCZSctEu5cKbUjR0G" data-form-email="true">
 
                     
 
