--- a/LightRoom.html
+++ b/LightRoom.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Creator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Creator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -256,7 +256,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="HOsWjyTCAa5P9FN5NVuxbro+5A7j1Wr+5AqZSNASEkYTe7MWe/T2sx0Mh7XAUvP8Vy7hKBnJbxpEQVm4JtrfKuLaEbEet7c+S7TNKssFLR8dzlDA0OgjgG3dWgXphE4w" data-form-email="true">
+                    <input type="hidden" value="Jb3TfVgCQxXjbximt9gOoNzPKqdVEkjKsDi6YcOuEn6v1mK2LrAEa9cFmFht6O/cPKDWBkyW2q7ymMlkz7BpmmpPEazUzgOKb4K7q8wnMghFFbOP+auxjncsJpBlI9Uq" data-form-email="true">
 
                     
 
