--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Creator</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="CUdU7n2h2sVa7JBd3Hmn3r07FG2opq8h226VD9doWGkhsRPrVQr2lUfQVUzg8VGWPs1s9nY+b8pVusaDmgxgd2Ylq5myZE5wu2C717qAES8qNpsx/4hbhFFcZjd0vb+e" data-form-email="true">
+                    <input type="hidden" value="20vHUYzQB/AMVE/y4o6ZBJ64khUkx95VvOz0IUUWRGNsM/hUj6pGDNQuP6Rs5A7wFN7uMLQa/6vMWnjRk8FOGPGzl2/gwO0CU55HlSUNI/We6uxiilDxxoMhWz09IUOn" data-form-email="true">
 
                     
 
