--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Maker</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="VU5LEjL0arZz9W4JdrOJyq7jk4EwIBMfYrtxvTXvM/zfYHLbq/qJna536l9LzzmGTGFeZ9F/nR2HtSJRgDxvQTk28i6Y3J8TioQ4SjkyJQmfMTP/sfY+JF4VXsT0puMz" data-form-email="true">
+                    <input type="hidden" value="hgM1mRy77peZu8FDPlj+D+zzk9lUIDYr+UneitLMZrX1sHGsLWgVqKSQduuXQCsOc4hPbF1CJ6pvt+CGyeie6b32jpqrMfsDOVXMhlTM4FmOzlok3Q+5Out/ehdO+YOj" data-form-email="true">
 
                     
 
