--- a/LightRoom.html
+++ b/LightRoom.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Site Maker</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -256,7 +256,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="idLzCRL+i5f6m267gDS0oUvBZiW6LunCizBmPNUn02TF8A5aNCPAziQOc1jih2f0wWaUX27NxrYzR+HLa62+OZ76q8c72smahC4GFlldlf2yVGa9eB6fBlBVuWPzrUv2" data-form-email="true">
+                    <input type="hidden" value="kcK48WqTsVE2y9ymJTEYloQh8K7gLr1vzVHPFUjenBW0FHnLRJVQmi3vzx/0Ej6bufl8dvb4I/C3r402XxTA9TNFrFgviFBH+H67UbY26bYEWXTjToQCtghEVgMnZw/o" data-form-email="true">
 
                     
 
