--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/mbr-3-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/mbr-3-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(0, 0, 0);"></div>
 
@@ -81,14 +81,14 @@
 
 </section>
 
-<section class="mbr-section article mbr-parallax-background" id="msg-box8-61" style="background-image: url(assets/images/mbr-6-2000x1333.jpg); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-section article mbr-parallax-background" id="msg-box8-63" style="background-image: url(assets/images/mbr-6-2000x1333.jpg); padding-top: 40px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(34, 34, 34);">
     </div>
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
-                <h3 class="mbr-section-title display-2">A Little About Me<br></h3>
+                <h3 class="mbr-section-title display-2">A Little Bit About Me<br></h3>
                 <div class="lead"></div>
                 <div><a class="btn btn-black" href="https://www.youtube.com/watch?v=-GTzmlIE58I" target="_blank">YouTube Video Link</a></div>
             </div>
@@ -246,7 +246,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="Dg8PZ1oUQ0oGz/00V55VensIVqAJoyV5AyXmUof4ZCGX3OBG77hd1LRPC1T9Ibemy+KpWGScqo12AIRvrEDeZ/pvE2wvkfGQ2r5ErAMxAsgDhVaHHQymKcF4NC+ZKPYa" data-form-email="true">
+                    <input type="hidden" value="6VUslsriOI+SJSO0NzuyzSahKLwghzcSRu9qrqZ1RZxHPoLUy8VP1QSv4kfcsHgpzYV6oVmYdLfae+xUHEM0R1BRnegYeLJiEF9zCoA9W+C0BPACohGMtHPRNWH9l66/" data-form-email="true">
 
                     
 
