--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Site Generator</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Generator</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="EmQXSNG4ZiwWOpdARhZQnscjv8d7hpclUJxQQ/qhpQZCJgzza+lSoeUUqvgT6EAbcz/7KTYr06umQEBOiJm6ZIJQ8+QqN6F1wPz3CBN7PqZc6yVYlpsB93PNib2r30Jq" data-form-email="true">
+                    <input type="hidden" value="FBo1KtZ4LZZgUdaD0z4wX38PqEB38SlrLYDZmbDEVnQSvKwNF5oIbCoRPCquSO3SgyDLtmBjqG2JvqdxAzlAf+J19FAKwSlPRStO7DibzKY5XByABPQivYsRMmA9jYr3" data-form-email="true">
 
                     
 
